# vaabbit

./: .gitignore  Cargo.toml  package.json
examples/: bunnymark.rs  coins.rs  collision_bench.rs  collision_type_detection.rs  context_state.rs  platformer.rs  test.rs  tree_bench.rs  visualize_tree.rs
src/: lib.rs
src/entity/: actor.rs  id.rs  mod.rs
src/events/: event.rs  event_bus.rs  mod.rs
src/math/: mod.rs
src/physics/: dynamictree.rs  mod.rs  physics.rs  physicsbody.rs  quadtree.rs
src/shapes/: aabb.rs  aabb_i32.rs  circle.rs  collider.rs  mod.rs  solve.rs
src/world/: actor.rs  mod.rs  quadtree.rs  registry.rs  world.rs
