[package]
name = "vaabbit"

version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
debug = true

[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[dependencies]
anymap = "*"
glam = "*"
smallvec = "1.15.1"
ulid = "*"
slotmap = "*"

[dev-dependencies]
macroquad = "*"
vibbit = { path = "../vibbit" }
