[package]
name = "vaabbit"

version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
debug = true

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = "fat"
debug = false
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
debug = false
codegen-units = 1

[dependencies]
anymap = "*"
glam = { version = "0.30.9", default-features = true, features = [] }
smallvec = "1.15.1"
ulid = "*"
slotmap = "*"
stash = "0.1.6"
rapidhash = "4.4.1"

[dev-dependencies]
macroquad = { version = "*" }
vibbit = { path = "../vibbit" }
